# guan

./: .eslintrc.json  .gitignore  CMakeLists.txt  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.json
docs/: 3rdpartylicenses.txt  404.html  index.html  main.4c3b8cf659cd757d.js  main.569a0676350f1ca7.js  main.6344238ba2ef070e.js  main.c627e8c79fec4b0d.js  main.ceaac799b5c01ec4.js  main.d20b5d43f3ca13bb.js  main.f59505d821769880.js  polyfills.6c67e1579985c6ce.js  runtime.0a24211ed35f8780.js  runtime.255f31e466475403.js  scripts.637d99688b72e0d0.js  scripts.65966bea6dbe0904.js  scripts.d5fbe9d936d36924.js  scripts.e717c9dc6dbf7e37.js  styles.df29bbfe33185b7f.css
docs/assets/: home.md
src/: CMakeLists.txt  index.html  test.ts
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/dyna/: dyna.module.ts
src/app/dyna/grades/: grades.component.html  grades.component.ts
src/app/dyna/home/: home.component.html
src/app/dyna/notfound/: notfound.component.html  notfound.component.spec.ts  notfound.component.ts
src/app/dyna/redie/: redie.component.html  redie.component.spec.ts  redie.component.ts
src/app/stasis/: stasis.module.ts
src/app/stasis/basepage/: basepage.component.html  basepage.component.spec.ts  basepage.component.ts
src/app/stasis/md-lover/: md-lover.component.html  md-lover.component.spec.ts  md-lover.component.ts
src/assets/: home.md
src/mainframe/: CMakeLists.txt  application.cpp  application.hpp  extdebug.cpp  image.cpp  linalg.cpp  linalg.hpp  mainframe.cpp  pipeline.cpp  shared.hpp  window.cpp
src/mainframe/entities/: object.cpp  object.hpp
src/mainframe/shaders/: shader.frag  shader.vert
src/rebuild/: CMakeLists.txt  application.cpp  application.hpp  device.cpp  device.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  window.cpp  window.hpp
src/rebuild/shaders/: vertexShader.vert
